add a simple mat form field with error display

--- a/apps/app/src/app/app.component.html
+++ b/apps/app/src/app/app.component.html
@@ -1,1 +1,13 @@
-...
+<h1>The common way to use the form field</h1>
+<mat-form-field appearance="fill">
+  <mat-label>Give me a name</mat-label>
+  <input
+    matInput
+    [formControl]="nameControl"
+    placeholder="The name"
+    [required]="true"
+  />
+  <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+  <mat-hint>Hint</mat-hint>
+  <mat-error> any invalid input </mat-error>
+</mat-form-field>
